<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tacho</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Start">start</string>
    <string name="stop">stop</string>
    <string name="start">start</string>
    <string name="timer">00:00:00</string>
    <string name="Reset">reset</string>
    <string name="speed">Geschwindigkeit:</string>
    <string name="einheit_speed">km/h</string>
    <string name="value_speed">0.0</string>
    <string name="messdauer">Messdauer:</string>
    <string name="einheit_messdauer">min.</string>
    <string name="distance_einheit">m</string>
    <string name="value_distance">0.0</string>
    <string name="name_distance">zurückgelegter Weg:</string>

</resources>
